--- a/nethunt-crm-api.yaml
+++ b/nethunt-crm-api.yaml
@@ -4,7 +4,7 @@ info:
   description: API for accessing and managing NetHunt CRM data.
   version: 1.0.0
 servers:
-- url: https://nethunt.com/api/v1/zapier
+  - url: https://nethunt.com/api/v1/zapier
 components:
   securitySchemes:
     basicAuth:
@@ -17,6 +17,7 @@ components:
         name:
           type: string
           description: Name of the field
+      additionalProperties: true
     Record:
       type: object
       properties:
@@ -31,13 +32,14 @@ components:
         fields:
           $ref: '#/components/schemas/Field'
 security:
-- basicAuth: []
+  - basicAuth: []
 paths:
   /triggers/readable-folder:
     get:
       summary: List all readable folders
       security:
-      - basicAuth: []
+        - basicAuth: []
+      operationId: getReadableFolders
       responses:
         '200':
           description: A list of readable folders
@@ -52,12 +54,13 @@ paths:
                       type: string
                     name:
                       type: string
-      operationId: getReadableFolders
+
   /triggers/writable-folder:
     get:
       summary: List all writable folders
       security:
-      - basicAuth: []
+        - basicAuth: []
+      operationId: getWritableFolders
       responses:
         '200':
           description: A list of writable folders
@@ -72,16 +75,19 @@ paths:
                       type: string
                     name:
                       type: string
-      operationId: getWritableFolders
+
   /triggers/folder-field/{folderId}:
     get:
       summary: List fields in a folder
+      security:
+        - basicAuth: []
+      operationId: getFolderFields
       parameters:
-      - name: folderId
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: folderId
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: A list of fields
@@ -94,29 +100,32 @@ paths:
                   properties:
                     name:
                       type: string
-      operationId: getFolderFields
+
   /searches/find-record/{folderId}:
     get:
       summary: Find records by ID or query
+      security:
+        - basicAuth: []
+      operationId: findRecords
       parameters:
-      - name: folderId
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: recordId
-        in: query
-        schema:
-          type: string
-      - name: query
-        in: query
-        schema:
-          type: string
-      - name: limit
-        in: query
-        schema:
-          type: integer
-          default: 1
+        - name: folderId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: recordId
+          in: query
+          schema:
+            type: string
+        - name: query
+          in: query
+          schema:
+            type: string
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            default: 1
       responses:
         '200':
           description: Matching records
@@ -126,16 +135,19 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Record'
-      operationId: findRecords
+
   /actions/create-record/{folderId}:
     post:
       summary: Create a new record
+      security:
+        - basicAuth: []
+      operationId: createRecord
       parameters:
-      - name: folderId
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: folderId
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -154,16 +166,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Record'
-      operationId: createRecord
+
   /actions/create-comment/{recordId}:
     post:
       summary: Add a comment to a record
+      security:
+        - basicAuth: []
+      operationId: createComment
       parameters:
-      - name: recordId
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: recordId
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -186,16 +201,19 @@ paths:
                   createdAt:
                     type: string
                     format: date-time
-      operationId: createComment
+
   /actions/link-gmail-thread/{recordId}:
     post:
       summary: Link a Gmail thread to a record
+      security:
+        - basicAuth: []
+      operationId: linkGmailThread
       parameters:
-      - name: recordId
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: recordId
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -208,4 +226,3 @@ paths:
       responses:
         '200':
           description: Gmail thread linked
-      operationId: linkGmailThread
